Update swagger document
