# docs/swagger.json
@@ -299,6 +299,29 @@
                 }
             }
         },
+        "/status": {
+            "get": {
+                "description": "returns status",
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "status"
+                ],
+                "summary": "Get status",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/tickets": {
             "get": {
                 "description": "returns tickets",
@@ -1042,6 +1065,16 @@
                     }
                 }
             }
+        },
+        "/ws": {
+            "get": {
+                "description": "returns websocket connection",
+                "tags": [
+                    "websocket"
+                ],
+                "summary": "Serve websocket",
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -1254,11 +1287,14 @@
                 1000000000,
                 60000000000,
                 3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
                 1000000000,
-                60000000000
+                60000000000,
+                3600000000000
             ],
             "x-enum-varnames": [
                 "minDuration",
@@ -1269,11 +1305,14 @@
                 "Second",
                 "Minute",
                 "Hour",
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
                 "Second",
-                "Minute"
+                "Minute",
+                "Hour"
             ]
         }
     },
